deployment/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nus-ai
  labels:
    app: nus-ai
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nus-ai
  template:
    metadata:
      labels:
        app: nus-ai
    spec:
      containers:
        - name: nus-ai
          image: ghcr.io/yujieooi2000/nus_ai_team_4_2026:latest
          ports:
            - containerPort: 8000
          resources:
            requests:
              cpu: "100m"
              memory: "128Mi"
            limits:
              cpu: "500m"
              memory: "512Mi"
          imagePullPolicy: Always
